--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@
     flex-direction: column;
     padding: 20px;
     background-color: #f4f4f4;
-    height: 100%;
+    min-height: 100%;
     gap: 30px;
   }
   
@@ -38,10 +38,19 @@
     justify-content: center;
     margin-bottom: 20px;
   }
+
+  main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+  }
   
   .person-preview {
     display: flex;
     width: 100%;
+    min-width: 500px;
+    max-width: 1000px;
     height: 300px;
     background-color: white;
     border-radius: 10px;
